--- a/client/ltpclient.vcxproj.filters
+++ b/client/ltpclient.vcxproj.filters
@@ -326,6 +326,12 @@
     <ClCompile Include="GeneratedFiles\Release\moc_keybutton.cpp">
       <Filter>Generated Files\Release</Filter>
     </ClCompile>
+    <ClCompile Include="teachcommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="teachcommandline.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ltpclient.h">
@@ -557,6 +563,12 @@
     </ClInclude>
     <ClInclude Include="GeneratedFiles\ui_keyboarddialog.h">
       <Filter>Generated Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandline.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
