--- a/client/ltpclient.vcxproj.filters
+++ b/client/ltpclient.vcxproj.filters
@@ -335,6 +335,9 @@
     <ClCompile Include="..\base\globals.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\base\ltpmath.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ltpclient.h">
@@ -571,6 +574,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="teachcommandline.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\base\ltpmath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
