1.增加G114 G00 G01示教示意图 2.支持切换刀尖坐标示教 3.增加示教坐标获取 4.完善直线指令示教

--- a/client/ltpclient.vcxproj.filters
+++ b/client/ltpclient.vcxproj.filters
@@ -338,6 +338,9 @@
     <ClCompile Include="..\base\ltpmath.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="teachcommandg114.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ltpclient.h">
@@ -577,6 +580,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\base\ltpmath.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandg114.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
