1.增加圆弧字符映射(XYZ对应IJK) 2.数学库增加点乘、叉乘、矢量和、矢量差、计算圆心、半径、平面获取等接口 3.增加直线示教、G114、平面圆弧、空间圆弧、点坐标、空间整圆示教 4.示教模块选择支持翻页

--- a/client/ltpclient.vcxproj.filters
+++ b/client/ltpclient.vcxproj.filters
@@ -341,6 +341,18 @@
     <ClCompile Include="teachcommandg114.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="teachcommandplanararc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="teachcommandspatialarc.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="teachcommandspatialcircle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="teachcommandpoint.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="ltpclient.h">
@@ -583,6 +595,18 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="teachcommandg114.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandplanararc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandspatialarc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandspatialcircle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandpoint.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
