1.文件管理的类型，把前面的点去掉(LTP-22) 2.修复进给速率没有刷新，始终是5000问题(LTP-18) 3.修复三点共线判定条件太宽松问题(LTP-27) 4.修复主界面坐标正负号不能对齐问题(LTP-19) 5.现在下方提示栏的提示会在显示后10s清空(LTP-20) 6.修复移动距离小时，G00,G01示教不正确问题(LTP-24) 7.G114,G02.4示教格式问题(LTP-23) 8.空间整圆旋转坐标变化后报错不正确问题(LTP-26)

--- a/client/ltpclient.vcxproj.filters
+++ b/client/ltpclient.vcxproj.filters
@@ -588,5 +588,26 @@
     <ClInclude Include="..\base\ltpmath.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="teachcommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandg114.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandline.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandplanararc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandpoint.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandspatialarc.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="teachcommandspatialcircle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
